<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title_label"/>

    <EditText
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title_hint"

        android:minHeight="48dp"

        android:autofillHints="" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label"/>

    <Button
        android:id="@+id/book_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/book_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/book_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bool_solved_label"/>

    <Button
        android:id="@+id/book_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_suspect_text"
        />
    <Button
        android:id="@+id/book_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_report_text"
        />

</LinearLayout>